app/src/main/java/com/example/kotlindasar/FunctionScope.kt
package com.example.kotlindasar

fun main() {
    fun contohHelloWorld(){
        println("Hello World")
    }

    contohHelloWorld()
}

fun satu(){
    // error
    // contohHelloWorld()
}

fun dua(){
    // error
    // contohHelloWorld()
}